--- a/style.css
+++ b/style.css
@@ -1,29 +1,34 @@
-* {
+.body {
     box-sizing: border-box;
-  }
-  
-  .container {
+    margin: 0;
     display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .container>div {
-    border: 1px solid black;
-    height: 25px;
-    width: 25px;
-  }
-  
-  .container>div:nth-child(16n + 1) {
-    width: 100%;
-    border: 0;
-    height: 0;
-  }
-  
-/* .container>div{
-    background-color: aqua;
-    transition: background-color 0.5s;
-} */
+    justify-content: center;
+}
 
-.my-color-class{
-    background-color: black;
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container {
+    width: 700px;
+    height: 700px;
+    display: grid;
+    margin: 2rem;
+    border: 2px solid burlywood;
+}
+
+
+h1 {
+    text-align: center;
+}
+
+button {
+    width: 50px;
+}
+
+.btnstyle {
+    display: flex;
+    justify-content: center;
 }
